Update email address

--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 #+TITLE: AT42QT
 #+AUTHOR: Peter Polidoro
-#+EMAIL: peterpolidoro@gmail.com
+#+EMAIL: peter@polidoro.io
 
 * Library Information
   - Name :: AT42QT
@@ -8,7 +8,7 @@
   - License :: BSD
   - URL :: https://github.com/janelia-arduino/AT42QT
   - Author :: Peter Polidoro
-  - Email :: peterpolidoro@gmail.com
+  - Email :: peter@polidoro.io
 
 		Arduino library for the Microchip AT42QTxxxx family of capacitive touch controllers.
 
